syntax = "proto3";

package api;

option go_package = "github.com/hariskhan14/grpc-gateway-response-modifier/proto";

import "google/api/annotations.proto";

service UserService {
  rpc GetUserDetails(GetUserDetailsRequest) returns (GetUserDetailsResponse) {
    option (google.api.http) = {
      get: "/user/{id}"
    };
  };
}

message GetUserDetailsRequest {
  string id = 1;
}

message GetUserDetailsResponse {
  string first_name = 1;
  string last_Name = 2;
}